Avance asignación de conceptos a plantilla de planilla.

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Conceptos/_MsgRegistrarConcepto.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Conceptos/_MsgRegistrarConcepto.cshtml
@@ -15,8 +15,12 @@
     <i class="fa fa-times-circle-o"></i> Cerrar
 </button>
 
-<script>
-    $(".modal").on('hide.bs.modal', function () {
-        location.reload();
-    })
-</script>
+@if (Model.Success)
+{
+    <script type="text/javascript">
+        $(".modal").on('hide.bs.modal', function () {
+            generarDatatableConceptos();
+        });
+    </script>
+}
+
