--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/_MsgRegistrarPlantillaPlanilla.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/_MsgRegistrarPlantillaPlanilla.cshtml
@@ -15,8 +15,11 @@
     <i class="fa fa-times-circle-o"></i> Cerrar
 </button>
 
-<script>
-    $(".modal").on('hide.bs.modal', function () {
-        location.reload();
-    })
-</script>
+@if (Model.Success)
+{
+    <script type="text/javascript">
+        $(".modal").on('hide.bs.modal', function () {
+            generarDatatablePlantillasPlanilla();
+        });
+    </script>
+}
