--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/Index.cshtml
@@ -6,9 +6,9 @@
         <section class="content-header">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb float-right small d-none d-sm-inline-flex">
-                    <li class="breadcrumb-item"><a href="@Url.Action("Index", "Home")"><i class="fa fa-home">&nbsp;</i>Inicio</a></li>
-                    <li class="breadcrumb-item"><span><i class="fa fa-cogs">&nbsp;</i>Configuración </span></li>
-                    <li class="breadcrumb-item active"><span><i class="fa bi-ui-checks">&nbsp;</i>@ViewBag.Title </span></li>
+                    <li class="breadcrumb-item"><a href="@Url.Action("Index", "Home")"><i class="fa fa-home" aria-hidden="true">&nbsp;</i>Inicio</a></li>
+                    <li class="breadcrumb-item"><span><i class="fa fa-cogs" aria-hidden="true">&nbsp;</i>Configuración </span></li>
+                    <li class="breadcrumb-item active"><span><i class="fa bi-ui-checks" aria-hidden="true">&nbsp;</i>@ViewBag.Title </span></li>
                 </ol>
             </nav>
             <h1 class="">@ViewBag.Title <small></small></h1>
@@ -19,7 +19,7 @@
         <div class="card-header">
             <span class="h4">Conceptos</span>
             <a href="@Url.Action("Nuevo", "Conceptos")" class="btn btn-primary pull-right modal-link">
-                <i class="fa fa-plus-circle"></i> Nuevo concepto
+                <i class="fa fa-plus-circle" aria-hidden="true"></i> Nuevo concepto
             </a>
         </div>
         <div class="card-body">
@@ -52,7 +52,7 @@
         <div class="card-header">
             <span class="h4">Plantillas</span>
             <a href="@Url.Action("Nuevo", "PlantillaPlanilla")" class="btn btn-primary pull-right modal-link">
-                <i class="fa fa-plus-circle"></i> Nueva Plantilla
+                <i class="fa fa-plus-circle" aria-hidden="true"></i> Nueva Plantilla
             </a>
         </div>
         <div class="card-body">
@@ -112,7 +112,7 @@
                             let iClass = (row.estaHabilitado === true) ? 'check-circle-o' : 'minus-circle';
                             let estado = (row.estaHabilitado === true) ? 'Habilitado' : 'Deshabilitado';
                             let token = $('input[name="__RequestVerificationToken"]').val();
-                            let onClickFunction = `ChangeState(${data}, ${row.estaHabilitado}, '@Url.Action("CambiarEstado", "Conceptos")', '${token}')`;
+                            let onClickFunction = `ChangeState(${data}, ${row.estaHabilitado}, '@Url.Action("CambiarEstado", "Conceptos")', '${token}', 'dataTableConceptos')`;
 
                             let html = `<span id="td${data}">` +
                                 `<button type="submit" class="btn btn-xs btn-${btnClass}" onclick="${onClickFunction}">` +
@@ -177,7 +177,7 @@
                             let iClass = (row.estaHabilitado === true) ? 'check-circle-o' : 'minus-circle';
                             let estado = (row.estaHabilitado === true) ? 'Habilitado' : 'Deshabilitado';
                             let token = $('input[name="__RequestVerificationToken"]').val();
-                            let onClickFunction = `ChangeState(${data}, ${row.estaHabilitado}, '@Url.Action("CambiarEstado", "PlantillaPlanilla")', '${token}')`;
+                            let onClickFunction = `ChangeState(${data}, ${row.estaHabilitado}, '@Url.Action("CambiarEstado", "PlantillaPlanilla")', '${token}', 'dataTablePlantillaPlanilla')`;
 
                             let html = `<span id="td${data}">` +
                                 `<button type="submit" class="btn btn-xs btn-${btnClass}" onclick="${onClickFunction}">` +
@@ -191,7 +191,7 @@
                     {
                         targets: -2,
                         render: function (data, type, row) {
-                            return `<a class="modal-link-lg" href="@Url.Action("AsignarConceptos", "PlantillaPlanilla")/${data}` +
+                            return `<a class="modal-link-lg" href="@Url.Action("ConceptosAsignados", "PlantillaPlanilla")/${data}` +
                                 '"><i class="fa bi-ui-checks" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Asignar</span></a>';
                         }
                     },
