--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/_ConceptosAsignados.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/_ConceptosAsignados.cshtml
@@ -1,25 +1,150 @@
-﻿@*@model WebApp.Models.PlantillaPlanillaModel
-    @Scripts.Render("~/bundles/jqueryval")*@
+﻿@model IEnumerable<WebApp.Models.ConceptoAsignadoPlantillaModel>
+@*@Scripts.Render("~/bundles/jqueryval")*@
 
 <div class="modal-header bg-dark-gray" style="border-radius: .2rem .2rem 0px 0px">
-    <h5 class="modal-title text-center"><i class="fa fa-tag">&nbsp;</i> @ViewBag.Title</h5>
+    <h5 class="modal-title text-center"><i class="fa fa-tag"></i>&nbsp;@ViewBag.Title</h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 </div>
 
 <div class="modal-body">
-    
-</div>
+    <div class="container-fluid mb-4">
+        <dl class="row">
+            <dt class="col-sm-3">Clase Planilla</dt>
+            <dd class="col-sm-9">@ViewBag.ClasePlanillaDesc</dd>
 
-<div class="modal-footer" id="div_msg">
-    <div class="col-md-12" style="display:none" id="loading">
-        <h6>Espere un momento...</h6>
-        <div class="progress">
-            <div class="indeterminate"></div>
+            <dt class="col-sm-3">Categoría Planilla</dt>
+            <dd class="col-sm-9">@ViewBag.CategoriaPlanillaDesc</dd>
+
+            <dt class="col-sm-3">Descripción</dt>
+            <dd class="col-sm-9">@ViewBag.PlantillaPlanillaDesc</dd>
+
+            <dt class="col-sm-3">Estado</dt>
+            <dd class="col-sm-9">
+                @if (ViewBag.EstaHabilitado)
+                {
+                    <span class="text-success">Habilitado</span>
+                }
+                else
+                {
+                    <span class="text-secondary">Deshabilitado</span>
+                }
+            </dd>
+        </dl>
+    </div>
+    <div class="container-fluid" id="spin-loader" style="display:none;">
+        <div class="d-flex justify-content-center">
+            <div class="spinner-border text-info" role="status" style="width: 5rem; height: 5rem;">
+                <span class="sr-only">Cargando...</span>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center">
+            <span id="load-message" class="h5 mt-4"></span>
         </div>
     </div>
-
-    <button type="button" class="btn btn-secondary" id="btnCancel" data-dismiss="modal">
-        <i class="fa fa-times-circle-o"></i> Cerrar
-    </button>
+    <div class="container-fluid" id="content-body">
+        <div class="table-responsive mb-4">
+            <table class="table table-hover" id="dataTableConceptosAsignados" width="100%" style="min-height: 300px;">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Tip.Concepto</th>
+                        <th>Cod.Concepto</th>
+                        <th>Descripción</th>
+                        <th>Estado</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @if (Model != null && Model.Count() > 0)
+                    {
+                        foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>@item.tipoConceptoDesc</td>
+                                <td>@item.conceptoCod</td>
+                                <td>@item.conceptoDesc</td>
+                                <td>@item.estaHabilitado</td>
+                                <td>@item.plantillaPlanillaConceptoID</td>
+                            </tr>
+                        }
+                    }
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <th>Tip.Concepto</th>
+                        <th>Cod.Concepto</th>
+                        <th>Descripción</th>
+                        <th>Estado</th>
+                        <th></th>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
+        <div class="modal-footer" id="div_msg">
+            <a href="@Url.Action("AsignarConcepto","PlantillaPlanilla", new { id = ViewBag.PlantillaPlanillaID })" class="btn btn-primary" id="btn-agregar">
+                <i class="fa fa-plus-circle" aria-hidden="true"></i>&nbsp;Agregar concepto
+            </a>
+            <button type="button" class="btn btn-secondary" id="btnCancel" data-dismiss="modal"><i class="fa fa-times-circle-o"></i>&nbsp;Cerrar</button>
+        </div>
+    </div>
 </div>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#dataTableConceptosAsignados').DataTable({
+            "bStateSave": true,
+            bDestroy: true,
+            lengthMenu: [[5, 10], [5, 10, "Todos"]],
+            iDisplayLength: 5,
+            language: {
+                search: "Buscar: ",
+                lengthMenu: "Mostrar _MENU_ filas",
+                info: "Mostrando del _START_ al _END_ de _TOTAL_ elementos.",
+                infoEmpty: "No se encontraron registros.",
+                zeroRecords: "No hay data disponible.",
+                emptyTable: "No hay data disponible.",
+                paginate: {
+                    first: "Primero",
+                    previous: "Previo",
+                    next: "Siguiente",
+                    last: "Último"
+                },
+                aria: {
+                    sortAscending: ": activar para ordenar la columna en orden ascendente",
+                    sortDescending: ": activar para ordenar la columna en orden descendente"
+                }
+            }
+        });
+
+        $('#btn-agregar').on('click', function (event) {
+            event.preventDefault();
+            var url = $(event.currentTarget).attr('href');
+            loadForm(url, 'obteniendo formulario...')
+        });
+
+        function loadForm(url, message) {
+            $('#load-message').html(message);
+
+            $.ajax({
+                url: url,
+                type: "GET",
+                beforeSend: function () {
+                    $('#content-body').hide();
+                    $('#spin-loader').show();
+                },
+                success: function (data) {
+                    $('#content-body').html(data);
+                    setTimeout(function () {
+                        $('#spin-loader').hide();
+                        $('#content-body').show();
+                    }, 300);
+                },
+                error: function (jqXHR, textStatus, errorThrown) {
+                    $('#content-body').html('<p class="alert alert-danger">' + jqXHR.responseText + '</p>');
+                    $('#spin-loader').hide();
+                    $('#content-body').show();
+                }
+            })
+        }
+    });
+</script>
 
