--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/_ConceptosAsignados.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/_ConceptosAsignados.cshtml
@@ -1,5 +1,4 @@
 ﻿@model IEnumerable<WebApp.Models.ConceptoAsignadoPlantillaModel>
-@*@Scripts.Render("~/bundles/jqueryval")*@
 
 <div class="modal-header bg-dark-gray" style="border-radius: .2rem .2rem 0px 0px">
     <h5 class="modal-title text-center"><i class="fa fa-tag"></i>&nbsp;@ViewBag.Title</h5>
@@ -62,7 +61,7 @@
                                 <td>@item.tipoConceptoDesc</td>
                                 <td>@item.conceptoCod</td>
                                 <td>@item.conceptoDesc</td>
-                                <td>@item.estaHabilitado</td>
+                                <td>@item.estaHabilitado.ToString().ToLower()</td>
                                 <td>@item.plantillaPlanillaConceptoID</td>
                             </tr>
                         }
@@ -91,6 +90,33 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $('#dataTableConceptosAsignados').DataTable({
+            columnDefs: [
+                {
+                    targets: -2,
+                    render: function (data, type, row) {
+                        let btnClass = (data === true) ? 'success' : 'secondary';
+                        let iClass = (data === true) ? 'check-circle-o' : 'minus-circle';
+                        let estado = (data === true) ? 'Habilitado' : 'Deshabilitado';
+                        let token = $('input[name="__RequestVerificationToken"]').val();
+                        let onClickFunction = `ChangeState(${row[4]}, ${data}, '@Url.Action("CambiarEstadoConcepto", "PlantillaPlanilla")', '${token}', 'dataTableConceptosAsignados')`;
+
+                        let html = `<span id="td${row[4]}">` +
+                            `<button type="submit" class="btn btn-xs btn-${btnClass}" onclick="${onClickFunction}">` +
+                            `<i class="fa fa-${iClass}" aria-hidden="true"></i> <span class="d-none d-md-inline-block">${estado}</span>` +
+                            '</button>' +
+                            '</span>';
+
+                        return html;
+                    }
+                },
+                {
+                    targets: -1,
+                    render: function (data, type, row) {
+                        return `<a class="btn-editar" href="@Url.Action("EditarConcepto", "PlantillaPlanilla")/${data}` +
+                            '"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Editar</span></a>';
+                    }
+                }
+            ],
             "bStateSave": true,
             bDestroy: true,
             lengthMenu: [[5, 10], [5, 10, "Todos"]],
