--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/_MantenimientoAsignacionConcepto.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/_MantenimientoAsignacionConcepto.cshtml
@@ -13,91 +13,73 @@
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.plantillaPlanillaID)
     @Html.HiddenFor(model => model.plantillaPlanillaConceptoID)
+
     <div class="form-row">
         <div class="col-12">
-            <div class="form-group">
-                @Html.LabelFor(model => model.conceptoID, new { @class = "control-label" })
-                @Html.DropDownListFor(model => model.conceptoID, ViewBag.ListaConceptos as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase select-filter-modal" })
-                @Html.ValidationMessageFor(model => model.conceptoID, null, new { @class = "text-danger" })
+            <div class="form-group row">
+                @Html.LabelFor(model => model.conceptoID, new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-10">
+                    @Html.DropDownListFor(model => model.conceptoID, ViewBag.ListaConceptos as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase select-filter-modal" })
+                    @Html.ValidationMessageFor(model => model.conceptoID, null, new { @class = "text-danger" })
+                </div>
             </div>
         </div>
     </div>
 
     <div class="form-row">
-        <div class="col-6">
-            <div class="form-group">
-                <label>@Html.RadioButtonFor(model => model.esMontoFijo, true) Valor fijo</label>
-                <label>@Html.RadioButtonFor(model => model.esMontoFijo, false) Valor porcentual</label>
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="form-group">
-                @Html.LabelFor(model => model.monto, new { @class = "control-label" })
-                @Html.TextBoxFor(model => model.monto, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.monto, null, new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
-
-    <div class="form-row">
-        <div class="input-group">
-            <div class="input-group-prepend">
-                <div class="input-group-text">
-                    <input type="radio" aria-label="Radio button for following text input">
+        <div class="col-8">
+            <div class="form-group row">
+                @Html.LabelFor(model => model.monto, new { @class = "col-sm-3 control-label" })
+                <div class="col-sm-9">
+                    @Html.TextBoxFor(model => model.monto, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.monto, null, new { @class = "text-danger" })
                 </div>
             </div>
-            <input type="text" class="form-control" aria-label="Text input with radio button">
         </div>
-        <div class="input-group">
-            <div class="input-group-prepend">
-                <div class="input-group-text">
-                    <input type="radio" aria-label="Radio button for following text input">
-                </div>
+        <div class="col-4">
+            <div class="form-check form-check-inline">
+                <label class="form-check-label">@Html.RadioButtonFor(model => model.esMontoFijo, true) Monto fijo (S/.)</label>
             </div>
-            <input type="text" class="form-control" aria-label="Text input with radio button">
+            <div class="form-check form-check-inline">
+                <label class="form-check-label">@Html.RadioButtonFor(model => model.esMontoFijo, false) Valor porcentual (%)</label>
+            </div>
         </div>
     </div>
 
     <div class="form-row">
         <div class="col-12">
-            <div class="form-group form-check">
-                @Html.CheckBoxFor(model => model.montoEstaAqui, new { @class = "form-check-input" })
-                @Html.LabelFor(model => model.montoEstaAqui, new { @class = "form-check-label" })
-                @Html.ValidationMessageFor(model => model.montoEstaAqui, null, new { @class = "text-danger" })
+            <div class="form-group row">
+                <label class="col-sm-2 control-label">&nbsp;</label>
+                <div class="col-sm-10">
+                    <div class="form-check">
+                        @Html.CheckBoxFor(model => model.montoEstaAqui, new { @class = "form-check-input" })
+                        @Html.LabelFor(model => model.montoEstaAqui, new { @class = "form-check-label" })
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
     <div class="form-row">
-        <div class="col-6">
-            <div class="form-group form-check">
-                @Html.CheckBoxFor(model => model.aplicarFiltro1, new { @class = "form-check-input" })
-                @Html.LabelFor(model => model.aplicarFiltro1, new { @class = "form-check-label" })
-                @Html.ValidationMessageFor(model => model.aplicarFiltro1, null, new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="form-group">
-                @Html.LabelFor(model => model.filtro1, new { @class = "control-label" })
-                @Html.TextBoxFor(model => model.filtro1, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.filtro1, null, new { @class = "text-danger" })
+        <div class="col-12">
+            <div class="form-group row">
+                <label class="col-sm-2 control-label">Filtro 1 @Html.CheckBoxFor(model => model.aplicarFiltro1)</label>
+                <div class="col-sm-10">
+                    @Html.DropDownListFor(model => model.filtro1, ViewBag.Filtro1 as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase", @disabled = "disabled" })
+                    @Html.ValidationMessageFor(model => model.filtro1, null, new { @class = "text-danger" })
+                </div>
             </div>
         </div>
     </div>
 
     <div class="form-row">
-        <div class="col-6">
-            <div class="form-group form-check">
-                @Html.CheckBoxFor(model => model.aplicarFiltro2, new { @class = "form-check-input" })
-                @Html.LabelFor(model => model.aplicarFiltro2, new { @class = "form-check-label" })
-                @Html.ValidationMessageFor(model => model.aplicarFiltro2, null, new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="form-group">
-                @Html.LabelFor(model => model.filtro2, new { @class = "control-label" })
-                @Html.TextBoxFor(model => model.filtro2, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.filtro2, null, new { @class = "text-danger" })
+        <div class="col-12">
+            <div class="form-group row">
+                <label class="col-sm-2 control-label">Filtro 2 @Html.CheckBoxFor(model => model.aplicarFiltro2)</label>
+                <div class="col-sm-10">
+                    @Html.DropDownListFor(model => model.filtro2, ViewBag.Filtro2 as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase", @disabled = "disabled" })
+                    @Html.ValidationMessageFor(model => model.filtro2, null, new { @class = "text-danger" })
+                </div>
             </div>
         </div>
     </div>
@@ -116,12 +98,23 @@
 
 <script type="text/javascript">
     $(function () {
+        @if(Model.aplicarFiltro1)
+        {
+            <text>cambiarEstadoCampoFiltro(true, 'filtro1');</text>
+        }
+
+        @if(Model.aplicarFiltro2)
+        {
+            <text>cambiarEstadoCampoFiltro(true, 'filtro2');</text>
+        }
+
+
         $('#content-body').on('click', '#btn-return', function (event) {
             event.preventDefault();
 
             let url = $(event.currentTarget).attr("href");
 
-            loadForm(url, "cargando formulario...")
+            loadForm(url, "cargando formulario...");
         });
 
         $('.select-filter-modal').select2({
@@ -132,17 +125,37 @@
             e.stopPropagation();
         });
 
-        function loadForm(url, message) {
-            $('#load-message').html(message);
+        $('#content-body').on('click', '#aplicarFiltro1', function (event) {
+            let checked = $(this).is(':checked');
+            cambiarEstadoCampoFiltro(checked, 'filtro1');
+        });
 
-            $('#content-body').hide();
-            $('#spin-loader').show();
-
-            let modal = $('#modal-container-lg');
-
-            setTimeout(function () {
-                modal.find('.modal-content').load(url)
-            }, 600);
-        }
+        $('#content-body').on('click', '#aplicarFiltro2', function (event) {
+            let checked = $(this).is(':checked');
+            cambiarEstadoCampoFiltro(checked, 'filtro2');
+        });
     });
+
+    function loadForm(url, message) {
+        $('#load-message').html(message);
+
+        $('#content-body').hide();
+        $('#spin-loader').show();
+
+        let modal = $('#modal-container-lg');
+
+        setTimeout(function () {
+            modal.find('.modal-content').load(url)
+        }, 600);
+    }
+
+    function cambiarEstadoCampoFiltro(habilitarCampo, idCampo) {
+        let id = '#content-body #' + idCampo;
+        if (habilitarCampo) {
+            $(id).prop('disabled', '');
+        } else {
+            $(id).val(null);
+            $(id).prop('disabled', 'disabled');
+        }
+    }
 </script>
