--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/_MantenimientoAsignacionConcepto.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/_MantenimientoAsignacionConcepto.cshtml
@@ -65,7 +65,7 @@
             <div class="form-group row">
                 <label class="col-sm-2 control-label">Filtro 1 @Html.CheckBoxFor(model => model.aplicarFiltro1)</label>
                 <div class="col-sm-10">
-                    @Html.DropDownListFor(model => model.filtro1, ViewBag.Filtro1 as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase", @disabled = "disabled" })
+                    @Html.DropDownListFor(model => model.filtro1, ViewBag.ListaFiltro1 as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase", @disabled = "disabled" })
                     @Html.ValidationMessageFor(model => model.filtro1, null, new { @class = "text-danger" })
                 </div>
             </div>
@@ -77,7 +77,7 @@
             <div class="form-group row">
                 <label class="col-sm-2 control-label">Filtro 2 @Html.CheckBoxFor(model => model.aplicarFiltro2)</label>
                 <div class="col-sm-10">
-                    @Html.DropDownListFor(model => model.filtro2, ViewBag.Filtro2 as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase", @disabled = "disabled" })
+                    @Html.DropDownListFor(model => model.filtro2, ViewBag.ListaFiltro2 as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase", @disabled = "disabled" })
                     @Html.ValidationMessageFor(model => model.filtro2, null, new { @class = "text-danger" })
                 </div>
             </div>
