--- a/src/app/00078-GestionPlanillas/WebApp/Views/Conceptos/_MantenimientoConcepto.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Conceptos/_MantenimientoConcepto.cshtml
@@ -47,6 +47,16 @@
                 </div>
             </div>
         </div>
+        
+        <div class="form-row">
+            <div class="col-12">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.conceptoAbrv, new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.conceptoAbrv, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.conceptoAbrv, null, new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
 
         <div class="row d-flex justify-content-center">
             <button type="submit" class="btn btn-primary center" id="btnsubmit"><i class="fa fa-save"></i> Guardar</button>
