--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/Index.cshtml
@@ -30,6 +30,7 @@
                             <th>Cod.Concepto</th>
                             <th>Tip.Concepto</th>
                             <th>Descripción</th>
+                            <th>Abrv</th>
                             <th>Estado</th>
                             <th></th>
                         </tr>
@@ -39,6 +40,7 @@
                             <th>Cod.Concepto</th>
                             <th>Tip.Concepto</th>
                             <th>Descripción</th>
+                            <th>Abrv</th>
                             <th>Estado</th>
                             <th></th>
                         </tr>
@@ -101,6 +103,7 @@
                     { data: 'conceptoCod' },
                     { data: 'tipoConceptoDesc' },
                     { data: 'conceptoDesc' },
+                    { data: 'conceptoAbrv' },
                     { data: 'conceptoID' },
                     { data: 'conceptoID' }
                 ],
@@ -191,7 +194,7 @@
                     {
                         targets: -2,
                         render: function (data, type, row) {
-                            return `<a class="modal-link-lg" href="@Url.Action("ConceptosAsignados", "PlantillaPlanilla")/${data}` +
+                            return `<a class="modal-link-lg" href="@Url.Action("ConceptosAsignados", "PlantillaPlanillaConcepto")/${data}` +
                                 '"><i class="fa bi-ui-checks" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Asignar</span></a>';
                         }
                     },
