--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanillaConcepto/_ConceptosAsignados.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanillaConcepto/_ConceptosAsignados.cshtml
@@ -98,13 +98,20 @@
             {
                 targets: -2,
                 render: function (data, type, row) {
+                    console.log(row);
                     let btnClass = (data === "true") ? 'success' : 'secondary';
                     let iClass = (data === "true") ? 'check-circle-o' : 'minus-circle';
                     let estado = (data === "true") ? 'Habilitado' : 'Deshabilitado';
+                    
+                    let rowID = row[5];
+                    let estaHabilitado = data;
+                    let url = '@Url.Action("CambiarEstado", "PlantillaPlanillaConcepto")';
                     let token = $('input[name="__RequestVerificationToken"]').val();
-                    let onClickFunction = `ChangeState(${row[4]}, ${data}, '@Url.Action("CambiarEstado", "PlantillaPlanillaConcepto")', '${token}', 'dataTableConceptosAsignados')`;
+                    let container = 'dataTableConceptosAsignados';
 
-                    let html = `<span id="td${row[4]}">` +
+                    let onClickFunction = `ChangeState(${rowID}, ${estaHabilitado}, '${url}', '${token}', '${container}')`;
+
+                    let html = `<span id="td${rowID}">` +
                         `<button type="submit" class="btn btn-xs btn-${btnClass}" onclick="${onClickFunction}">` +
                         `<i class="fa fa-${iClass}" aria-hidden="true"></i> <span class="d-none d-md-inline-block">${estado}</span>` +
                         '</button>' +
