--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanillaConcepto/_ConceptosAsignados.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanillaConcepto/_ConceptosAsignados.cshtml
@@ -53,6 +53,7 @@
                         <th>Valor</th>
                         <th>Estado</th>
                         <th></th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -67,6 +68,7 @@
                                 <td>@item.valorConceptoFormateado</td>
                                 <td>@item.estaHabilitado.ToString().ToLower()</td>
                                 <td>@item.plantillaPlanillaConceptoID</td>
+                                <td>@item.plantillaPlanillaConceptoID</td>
                             </tr>
                         }
                     }
@@ -78,6 +80,7 @@
                         <th>Descripción</th>
                         <th>Valor</th>
                         <th>Estado</th>
+                        <th></th>
                         <th></th>
                     </tr>
                 </tfoot>
@@ -96,13 +99,12 @@
     $('#dataTableConceptosAsignados').DataTable({
         columnDefs: [
             {
-                targets: -2,
+                targets: -3,
                 render: function (data, type, row) {
-                    console.log(row);
                     let btnClass = (data === "true") ? 'success' : 'secondary';
                     let iClass = (data === "true") ? 'check-circle-o' : 'minus-circle';
                     let estado = (data === "true") ? 'Habilitado' : 'Deshabilitado';
-                    
+
                     let rowID = row[5];
                     let estaHabilitado = data;
                     let url = '@Url.Action("CambiarEstado", "PlantillaPlanillaConcepto")';
@@ -121,10 +123,17 @@
                 }
             },
             {
-                targets: -1,
+                targets: -2,
                 render: function (data, type, row) {
                     return `<a class="btn-editar" href="@Url.Action("Editar", "PlantillaPlanillaConcepto")/${data}` +
                         '" title="Editar"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>';
+                }
+            },
+            {
+                targets: -1,
+                render: function (data, type, row) {
+                    return `<a class="btn-eliminar" href="#" data-id="${data}"` +
+                        '" title="Eliminar"><i class="fa fa-trash" aria-hidden="true"></i></a>';
                 }
             }
         ],
@@ -162,6 +171,40 @@
         event.preventDefault();
         var url = $(event.currentTarget).attr('href');
         loadForm(url, 'obteniendo datos del concepto...');
+    });
+
+    $('.modal-body').on('click', '.btn-eliminar', function (event) {
+        event.preventDefault();
+
+        let id = $(this).data("id");
+        let token = $('input[name="__RequestVerificationToken"]').val();
+
+        Swal.fire({
+            title: 'title',
+            text: 'mensaje',
+            icon: 'icon',
+            timer: 6000,
+            confirmButtonColor: '#0069d9',
+
+        }).then((result) => {
+            if (result.isConfirmed) {
+                $.ajax({
+                    url: '@Url.Action("Eliminar", "PlantillaPlanillaConcepto")/' + id,
+                    type: "POST",
+                    data: { __RequestVerificationToken: token },
+                    beforeSend: function () {
+                    },
+                    success: function (data) {
+                        console.log(data);
+                    },
+                    error: function (jqXHR, textStatus, errorThrown) {
+                        $('#content-body').html('<p class="alert alert-danger">' + jqXHR.responseText + '</p>');
+                        $('#spin-loader').hide();
+                        $('#content-body').show();
+                    }
+                });
+            }
+        });
     });
 
     function loadForm(url, message) {
